# esp32-robot-arm

./: .gitignore  CMakeLists.txt  esp32-robotarm.code-workspace  idf_component.yml  sdkconfig  sdkconfig copy  sdkconfig.old  websocket_refactoring.patch
.trunk/: trunk.yaml
WebSocket/: EventManager.cpp  EventManager.hpp  RequestHandler.cpp  RequestHandler.hpp  Utilities.cpp  Utilities.hpp
components/commands/: CMakeLists.txt  CommandBase.hpp  CommandFactory.hpp  CommandLifecycleFSM.hpp  CommandLifecycleRegistry.hpp  CommandStateMachine.cpp  CommandStateMachine.hpp  GenericCommand.hpp  GenericCommandBuilder.hpp  RunMotorInSpeedModeCommand.hpp  (+5 more)
components/motor/: Builder.cpp  Builder.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Controller.cpp  Controller.hpp  ControllerTasks.cpp  Properties.cpp  Properties.hpp  ResponseHandler.cpp  ResponseHandler.hpp  idf_component.yml
components/motor/include/: Builder.hpp  Context.hpp  Controller.hpp  Properties.hpp  ResponseHandler.hpp
components/websocket/: CMakeLists.txt  ClientManager.cpp  ClientManager.hpp  EventManager.cpp  EventManager.hpp  RequestHandler.cpp  RequestHandler.hpp  ResponseSender.cpp  ResponseSender.hpp  Utilities.cpp  Utilities.hpp  WebSocket.cpp  WebSocket.hpp  WebSocketServer.cpp  WebSocketServer.hpp  idf_component.yml
components/websocket/commands/: IWsCommand.h  MotorControlCommand.h  RpcCommand.h  SetRunLevelCommand.h  SetRunModeCommand.h  WsCommandDefs.hpp  WsCommandFactory.hpp
components/websocket/include/: ClientManager.hpp  EventManager.hpp  RequestHandler.hpp  ResponseSender.hpp  Utilities.hpp  WebSocket.hpp  WebSocketServer.hpp
main/: CANServo.cpp  CANServo.hpp  CMakeLists.txt  CanBus.cpp  CanBus.h  CanBus.hpp  CommandDirector.hpp  CommandMapper.cpp  CommandMapper.hpp  CommandStateMachine.hpp  Events.cpp  Events.hpp  Kconfig.projbuild  MotorContext.cpp  MotorContext.hpp  MotorController.cpp  MotorController.hpp  MotorResponseHandler.cpp  MotorResponseHandler.hpp  RobotArm.hpp  StateMachine.cpp  StateMachine.hpp  TWAIController.cpp  TWAIController.hpp  TypeDefs.hpp  WebSocketServer.hpp  Wifi.cpp  Wifi.hpp  main.cpp  utils.hpp
main/CommandBuilder/: ICommandBuilder.hpp  SetTargetPositionCommandBuilder.hpp
main/Commands/: CommandLifecycleFSM.hpp  CommandLifecycleRegistry.hpp  GenericCommandBuilder.hpp  ResponseHandler.hpp  RunMotorInSpeedModeCommand.hpp  RunMotorInSpeedModeCommandBuilder.hpp  SetTargetPositionCommand.hpp  SetTargetPositionCommandBuilder.hpp  StopMotorCommand.hpp  TWAICommandBuilderBase.hpp  TWAICommandFactory.hpp
main/Commands/Query/: QueryMotorPositionCommand.hpp  QueryMotorPositionCommandBuilder.hpp  QueryMotorStatusCommand.hpp
main/Commands/SetParameters/: SetAutoScreenOffCommand.hpp  SetCANBitRateCommand.hpp  SetCANIDCommand.hpp  SetCurrentCommand.hpp  SetEnablePinCommand.hpp  SetHoldingCurrentCommand.hpp  SetHoldingCurrentCommandBuilder.hpp  SetHomeCommand.hpp  SetHomeCommandBuilder.hpp  SetLockedRotorProtectionCommand.hpp  SetRotationDirectionCommand.hpp  SetSubdivisionCommand.hpp  SetSubdivisionInterpolationCommand.hpp  SetWorkModeCommand.hpp
(+33 files in other folders)
